--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,4 +30,11 @@ layout: default
     {{ content }}
   </div>
 
+  <p style="margin:100px"></p>
+  {%- if site.disqus.shortname -%}
+    {%- include disqus_comments.html -%}
+  {%- endif -%}
+
+  <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
+
 </article>
