--- a/_layouts/story.html
+++ b/_layouts/story.html
@@ -19,4 +19,10 @@ layout: default
 	{{ content | remove_first:page.excerpt }}
 </div>
 
+<p style="margin:100px"></p>
+
+{%- if site.disqus.shortname -%}
+  {%- include disqus_comments.html -%}
+{%- endif -%}
+
 </article>
