--- a/assets/main.scss
+++ b/assets/main.scss
@@ -26,25 +26,23 @@ p {
 }
 
 .story-header {
+	font-family: Times New Roman, Times, Baskerville, Georgia, serif;
 	font-size: 25px;
 	text-align: center;
 	margin-top : 20px;
 	margin-bottom: 40px;
 }
 
-.story-first-para p {
-	margin-bottom: 5px;
-	line-height: 2;
-}
-
 .story-content p {
-	text-indent: 25px;
-	margin-bottom: 5px;
+	font-family: Times New Roman, Times, Baskerville, Georgia, serif;
+	font-size: 1.2em;
+	text-indent: 1.5em;
+	margin-bottom: 0em;
 	line-height: 2;
 }
 
 .by {
-	font-size: 0.7em;
+	font-size: 0.8em;
 }
 
 .footer-heading {
