--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,7 +18,6 @@ p {
 .story-content hr:before {
 	content: "***";
 	display: block;
-	font-size: 1em;
 	text-align: center;
 	margin-top:    3em;
 	margin-bottom: 3em;
@@ -26,17 +25,17 @@ p {
 }
 
 .story-header {
-	font-family: Times New Roman, Times, Baskerville, Georgia, serif;
-	font-size: 25px;
+	// font-family: Times New Roman, Times, Baskerville, Georgia, serif;
+	font-size: 1.5em;
 	text-align: center;
-	margin-top : 20px;
-	margin-bottom: 40px;
+	margin-top : 2em;
+	margin-bottom: 3em;
 }
 
 .story-content p {
-	font-family: Times New Roman, Times, Baskerville, Georgia, serif;
-	font-size: 1.2em;
-	text-indent: 1.5em;
+	// font-family: Times New Roman, Times, Baskerville, Georgia, serif;
+	font-size: 1em;
+	text-indent: 2em;
 	margin-bottom: 0em;
 	line-height: 2;
 }
